Admin paneli eklendi, Hisse verileri(bist resmi ve yahoo) sağlandı