@@ -2,7 +2,6 @@ package com.emrehalli.financeportal.market.support;
 
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -11,9 +10,32 @@ import java.util.List;
 @Component
 public class BistSymbolRegistry {
 
-    public List<String> getBist30Symbols() {
-        // TODO: BIST-30 sembol listesi resmi Borsa İstanbul
-        // verilerinden alınarak buraya eklenecek.
-        return Collections.emptyList();
+    private static final List<String> BIST_30_SYMBOLS = List.of(
+            "AKBNK", "AKFEN", "AKGRT", "AKSA", "AKSEN", "ALARK", "ALBRK", "ALFAS", "ALKIM", "ANACM",
+            "ARCLK", "ARDYZ", "ASELS", "ASTOR", "AYDEM", "BERA", "BIMAS", "BIRCH", "BOBET", "BRYAT",
+            "BTCIM", "BUCIM", "CANTE", "CCOLA", "CEMTS", "CIMSA", "CLEBI", "CWENE", "DOAS", "DOHOL",
+            "DYOBY", "ECILC", "EGEEN", "EKGYO", "ENERY", "ENJSA", "ENKAI", "ERBOS", "EREGL", "EUPWR",
+            "FAVOR", "FENER", "FLAP", "FROTO", "GARAN", "GENIL", "GESAN", "GLYHO", "GMTAS", "GOODY",
+            "GUBRF", "GWIND", "HALKB", "HEKTS", "HLGYO", "ISCTR", "ISGYO", "ISMEN", "IZENR", "JANTS",
+            "KARSN", "KARTN", "KAYSE", "KCHOL", "KERVT", "KLGYO", "KNFRT", "KONYA", "KOZAA", "KOZAL",
+            "KRDMD", "KRONT", "KTLEV", "LOGO", "MAVI", "MGROS", "MIATK", "MPARK", "NETAS", "NTTUR",
+            "ODAS", "ONCSM", "ORGE", "OTKAR", "OYAKC", "PEHOL", "PETKM", "PGSUS", "QUAGR", "RAYSG",
+            "SAHOL", "SASA", "SAYAS", "SISE", "SKBNK", "SNPAM", "SOKM", "SRVGY", "TAVHL", "TCELL",
+            "THYAO", "TKFEN", "TOASO", "TRGYO", "TTKOM", "TTRAK", "TSKB", "TUPRS", "TURSG", "ULKER",
+            "VAKBN", "VERUS", "VESTL", "YKBNK", "YYLGD", "ZOREN"
+    );
+
+    public List<String> getAllSymbols() {
+        return BIST_30_SYMBOLS;
+    }
+
+    public List<String> getAllYahooSymbols() {
+        return BIST_30_SYMBOLS.stream()
+                .map(this::toYahooSymbol)
+                .toList();
+    }
+
+    public String toYahooSymbol(String bistSymbol) {
+        return bistSymbol + ".IS";
     }
 }
